# biscuit-pure-wasm

./: Cargo.toml  Readme.md
src/: allocation.rs  lib.rs  wasm_export.rs  wasm_result.rs
src/builder/: authorizer_builder.rs  biscuit_builder.rs  mod.rs
src/crypto/: keypair.rs  mod.rs  private_key.rs  public_key.rs
src/token/: authorizer.rs  biscuit.rs  mod.rs
