[package]
name = "biscuit-wasm-go"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
biscuit-auth = { version = "6.0.0", features = ["wasm", "serde-error"] }
getrandom = { version = "0.2.8", features = ["custom"] }
serde = "1.0.219"
serde_json = "1.0.143"
rand = "0.8.5"


[profile.release]
panic = "abort"