[package]
name = "biscuit-wasm-shim"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
biscuit-auth = { version = "6.0.0", features = ["wasm", "serde-error"] }
getrandom = { version = "0.2.15", features = ["custom"] }
prost = { version = "0.10.4", optional = true }
rand = "0.8.5"
serde = "1.0.219"
serde_json = "1.0.143"

[profile.release]
panic = "abort"

[features]
print = []
ffi = ["prost"]
